--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && next export",
-    "deploy": "npm run export && touch out/.nojekyll && cp public/CNAME out/"
+    "export": "next build",
+    "deploy": "next build && touch out/.nojekyll && cp public/CNAME out/ 2>/dev/null || true"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
